liten fix til width på menyen?scrollbar sidelengs bør være borte nå tror jeg.

--- a/styles/menu.css
+++ b/styles/menu.css
@@ -49,7 +49,8 @@ div#title-login button.show-login {
     margin-right:0;
 }
 nav{
-    width:100%;
+    max-width:99.5%;
+    width:99.5%;
     display:none;
     clear:both;
 }
